--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,24 +1,34 @@
-.App {
-  text-align: center;
+.random-link {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  bottom: 1rem;
+  right: 1rem;
+
+  cursor: pointer;
+  border-radius: 100%;
+
+  width: 5rem;
+  height: 5rem;
+
+  text-decoration: none;
+
+  background-color: #b29ddb;
+
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.random-link:hover,
+.random-link:focus {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  background-color: #b9a9d8;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+.random-link span {
+  align-self: center;
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  font-size: 2rem;
+  color: #ffffff;
 }
