--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html {
+    box-sizing: border-box;
+
+    font-size: 62.5%;
+
+    font-family: 'Roboto', sans-serif;
+    line-height: normal;
+
+}
+
+*, *::after, *::before {
+    box-sizing: inherit;
+
+}
+
+body, html {
+  background-color: #e2e1e0;
+  height: 100%;
 }
