--- a/src/components/ResultsListItem/ResultsListItem.css
+++ b/src/components/ResultsListItem/ResultsListItem.css
@@ -25,16 +25,6 @@
     color: #826fa9;
 }
 
-.link {
-    text-decoration: none;
-
-    display: flex;
-    width: 100%;
-
-    padding: 0.5rem;
-    
-}
-
 .results-list-item p {
     flex: 1 0 auto;
 
@@ -42,13 +32,49 @@
     font-size: 1.5rem;
 }
 
+.card {
+    display: none;
+    opacity: 0;
+    transform: scale(0);
+    width: 100%;
+
+    padding: 0.5rem;
+
+    text-decoration: none;
+    
+}
+
+.card--active {
+    display: flex;
+}
+
+.card--show {
+    animation: card-load 0.15s forwards;
+}
+
 @media all and (min-width: 26rem) {
-  .link {
+  .card {
     width: 50%;
   }
 }
 @media all and (min-width: 45rem) {
-  .link {
+  .card {
     width: 33.33%;
   }
+}
+
+@keyframes card-load {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    50% {
+        opacity: 0.4;
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
