--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,6 +1,9 @@
 .search-bar {
     display: flex;
+   
     justify-content: center;
+
+    width: 100%;
 
     background-color: #ffffff;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -49,4 +52,42 @@
     padding: 0; 
     position: absolute; 
     width: 1px; 
+}
+
+.random-link {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+
+  z-index: 1;
+
+  top: 1rem;
+  right: 1rem;
+
+  cursor: pointer;
+  border-radius: 100%;
+
+  width: 5rem;
+  height: 5rem;
+
+  text-decoration: none;
+
+  background-color: #b29ddb;
+
+  box-shadow: 0 2px 4px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.24);
+  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+
+}
+
+.random-link:hover,
+.random-link:focus {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  background-color: #b9a9d8;
+}
+
+.random-link span {
+  align-self: center;
+
+  font-size: 2rem;
+  color: #ffffff;
 }
